@@ -2,15 +2,19 @@ context("convertRowsToList")
 
 test_that("convertRowsToList", {
   expect_equal(
-    convertRowsToList(matrix(1:4, 2, byrow=TRUE)),
+    convertRowsToList(matrix(1:4, 2, byrow=TRUE), as.vector = TRUE),
+    list(c(1, 2), c(3, 4))
+  )
+  expect_equal(
+    convertRowsToList(matrix(1:4, 2, byrow=TRUE), as.vector = FALSE),
     list(list(1, 2), list(3, 4))
   )
   expect_equal(
-    convertRowsToList(setColNames(matrix(1:4, 2, byrow=TRUE), c("a", "b")), use.names=TRUE),
+    convertRowsToList(setColNames(matrix(1:4, 2, byrow=TRUE), c("a", "b")), use.names=TRUE, as.vector = FALSE),
     list(list(a=1, b=2), list(a=3, b=4))
   )
   expect_equal(
-    convertRowsToList(setColNames(matrix(1:4, 2, byrow=TRUE), c("a", "b")), use.names=FALSE),
+    convertRowsToList(setColNames(matrix(1:4, 2, byrow=TRUE), c("a", "b")), use.names=FALSE, as.vector = FALSE),
     list(list(1, 2), list(3, 4))
   )
   levs = c("a", "b")
