@@ -2,7 +2,8 @@
 \alias{convertRowsToList}
 \title{Convert rows of data.frame or matrix to lists.}
 \usage{
-convertRowsToList(x, use.names = FALSE, factors.as.char = TRUE)
+convertRowsToList(x, use.names = FALSE, factors.as.char = TRUE,
+  as.vector = TRUE)
 }
 \arguments{
   \item{x}{[\code{matrix} | \code{data.frame}]\cr Object to
@@ -16,12 +17,16 @@ convertRowsToList(x, use.names = FALSE, factors.as.char = TRUE)
   is a data.frame, convert factor columns to string
   elements in the resulting lists?  Default is
   \code{TRUE}.}
+
+  \item{as.vector}{[\code{logical(1)}]\cr If \code{x} is a
+  matrix, store rows as vectors in the resulting list - or
+  otherwise as lists?  Default is \code{TRUE}.}
 }
 \value{
-[\code{list} of lists].
+[\code{list} of lists or vectors].
 }
 \description{
-For each row, one list is constructed, each entry of the
-row becomes a separate list element.
+For each row, one list/vector is constructed, each entry of
+the row becomes a list/vector element.
 }
 
